# python-project-template

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: __init__.py
tests/: __init__.py
