[project]
name = "project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyright>=1.1.400",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
]

[tool.pyright]
typeCheckingMode = "strict"
deprecateTypingAliases = true
reportDeprecated = "error"
